--- a/calc.html
+++ b/calc.html
@@ -26,21 +26,32 @@
         <div class="display" id="display">0</div>
         <div class="keypad" id="keys">
             <button class="ac-btn" id="clear">AC</button>
-            <button class="operator" id="divide">/</button>
+            <button class="filler" aria-hidden="true"></button>
+            <button class="filler" aria-hidden="true"></button>
+            <button class="filler" aria-hidden="true"></button>
+
             <button class="num" id="seven">7</button>
             <button class="num" id="eight">8</button>
             <button class="num" id="nine">9</button>
-            <button class="operator" id="multiply">*</button>
+            <button class="operator" id="divide">/</button>
+
             <button class="num" id="four">4</button>
             <button class="num" id="five">5</button>
             <button class="num" id="six">6</button>
-            <button class="operator" id="subtract">-</button>
+            <button class="operator" id="multiply">*</button>
+
             <button class="num" id="one">1</button>
             <button class="num" id="two">2</button>
             <button class="num" id="three">3</button>
-            <button class="operator" id="add">+</button>
+            <button class="operator" id="subtract">-</button>
+
+            <button class="filler" aria-hidden="true"></button>
             <button class="num" id="zero">0</button>
             <button class="num dot" id="decimal">.</button>
+            <button class="operator" id="add">+</button>
+
+
+
             <button class="operator" id="equals">=</button>
         </div>
     </section>
